feat: #85 add mainPage css, favicon

--- a/front/public/index.html
+++ b/front/public/index.html
@@ -2,7 +2,10 @@
 <html lang="ko">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link
+      rel="icon"
+      href="data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20xmlns%3Axlink%3D%22http%3A%2F%2Fwww.w3.org%2F1999%2Fxlink%22%20width%3D%2230%22%20height%3D%2230%22%20preserveAspectRatio%3D%22xMidYMid%20meet%22%20viewBox%3D%220%200%2024%2024%22%3E%3Cpath%20d%3D%22M24%2012.42l-4.428%204.415H24zm-4.428-4.417l-4.414%204.418v4.414h4.414V12.42L24%208.003V3.575h-4.428zm-4.414%200l4.414-4.428h-4.414zM0%2015.996h8.842v4.43h4.412V12.42H4.428l8.826-8.846H8.842L0%2012.421z%22%20fill%3D%22%23a7bc5b%22%2F%3E%3C%2Fsvg%3E"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -30,7 +33,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@800;900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@600;700;800;900&display=swap"
       rel="stylesheet"
     />
     <!-- bootstrap -->
