feat: #377 add favicon, desc

--- a/front/public/index.html
+++ b/front/public/index.html
@@ -10,7 +10,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="42 카뎃들을 위한 사이드 프로젝트 플랫폼"
     />
     <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
     <!--
