--- a/front/public/index.html
+++ b/front/public/index.html
@@ -2,10 +2,21 @@
 <html lang="ko">
   <head>
     <meta charset="utf-8" />
+    <link rel="icon" type="image/png" href="favicon-32.png" sizes="32x32" />
     <link
-      rel="icon"
-      href="data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20xmlns%3Axlink%3D%22http%3A%2F%2Fwww.w3.org%2F1999%2Fxlink%22%20width%3D%2230%22%20height%3D%2230%22%20preserveAspectRatio%3D%22xMidYMid%20meet%22%20viewBox%3D%220%200%2024%2024%22%3E%3Cpath%20d%3D%22M24%2012.42l-4.428%204.415H24zm-4.428-4.417l-4.414%204.418v4.414h4.414V12.42L24%208.003V3.575h-4.428zm-4.414%200l4.414-4.428h-4.414zM0%2015.996h8.842v4.43h4.412V12.42H4.428l8.826-8.846H8.842L0%2012.421z%22%20fill%3D%22%23a7bc5b%22%2F%3E%3C%2Fsvg%3E"
+      rel="apple-touch-icon"
+      type="image/png"
+      href="favicon-192.png"
+      sizes="192x192"
     />
+    <!-- <meta property="og:url" content="http://42doproject.com" /> -->
+    <meta property="og:title" content="42DoProject | 사이두 프로젝트" />
+    <meta
+      property="og:description"
+      content="42 카뎃들을 위한 사이드 프로젝트 플랫폼"
+    />
+    <meta property="og:image" content="bookmark.jpeg" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
