feat: #463 add meta-data image

--- a/front/public/index.html
+++ b/front/public/index.html
@@ -15,7 +15,10 @@
       property="og:description"
       content="42 카뎃들을 위한 사이드 프로젝트 플랫폼"
     />
-    <meta property="og:image" content="bookmark.jpeg" />
+    <meta
+      property="og:image"
+      content="https://42doproject.s3.ap-northeast-2.amazonaws.com/meta/meta-image.jpeg"
+    />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
