--- a/front/public/index.html
+++ b/front/public/index.html
@@ -2,13 +2,20 @@
 <html lang="ko">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" type="image/png" href="favicon-32.png" sizes="32x32" />
+    <!-- <link rel="icon" type="image/png" href="favicon-32.png" sizes="32x32" />
     <link
       rel="apple-touch-icon"
       type="image/png"
       href="favicon-192.png"
       sizes="192x192"
-    />
+    /> -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5" />
+    <meta name="msapplication-TileColor" content="#00aba9" />
+    <meta name="theme-color" content="#ffffff" />
     <!-- <meta property="og:url" content="http://42doproject.com" /> -->
     <meta property="og:title" content="42DoProject | 사이두 프로젝트" />
     <meta
