--- a/front/public/index.html
+++ b/front/public/index.html
@@ -9,11 +9,26 @@
       href="favicon-192.png"
       sizes="192x192"
     /> -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
-    <link rel="manifest" href="/site.webmanifest" />
-    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/apple-touch-icon.png?v=1"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/favicon-32x32.png?v=1"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/favicon-16x16.png?v=1"
+    />
+    <link rel="manifest" href="/site.webmanifest?v=1" />
+    <link rel="mask-icon" href="/safari-pinned-tab.svg?v=1" color="#a7bc5b" />
+    <link rel="shortcut icon" href="/favicon.ico?v=1" />
     <meta name="msapplication-TileColor" content="#00aba9" />
     <meta name="theme-color" content="#ffffff" />
     <!-- <meta property="og:url" content="http://42doproject.com" /> -->
